--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
-    border: 1px solid transparent;
+    border: 1px solid rgba(255, 255, 255, 0);
     -webkit-text-fill-color: #E0E4E6;
 
     -webkit-box-shadow: none;
@@ -36,6 +36,7 @@ body {
 body::-webkit-scrollbar {
     width: 15px;
 }
+
 body::-webkit-scrollbar-track {
     background: #212527;
 }
@@ -135,7 +136,7 @@ section {
     align-items: center;
     justify-content: center;
     color: var(--highlight-color);
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0);
     border: none;
     cursor: pointer;
     transform: translateY(-50%);
@@ -143,8 +144,9 @@ section {
     opacity: 0;
     z-index: -1;
 
-    transition: color .3s, background .3s,opacity .3s;
+    transition: color .3s, background .3s, opacity .3s;
 }
+
 .custom-input .clear-input.show {
     opacity: 1;
     z-index: 1;
@@ -157,7 +159,7 @@ section {
 }
 
 .custom-input .clear-input:active {
-    background: radial-gradient(#A3FF004D 0, rgba(0, 0, 0, 0) 50%);
+    background: radial-gradient(rgba(163, 255, 0, 30) 0, rgba(0, 0, 0, 0) 50%);
     color: var(--highlight-color);
 
 }
@@ -192,7 +194,7 @@ section {
 }
 
 .custom-input input::placeholder {
-    color: transparent;
+    color: rgba(255, 255, 255, 0);
 }
 
 @media (max-width: 767px) {
@@ -412,6 +414,8 @@ section {
     linear-gradient(0deg, rgba(21, 21, 21, 1) 0%, rgba(255, 255, 255, 0) 40%),
     url('./assets/images/header-bg.png');
 
+    background-attachment: scroll;
+
     background-position: 10vw top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -482,7 +486,7 @@ h1.header__title {
 }
 
 .scroll-btn {
-    background: transparent;
+    background: rgba(255, 255, 255, 0);
     color: var(--highlight-color);
     border: 1px solid var(--highlight-color);
     border-radius: 50%;
@@ -1225,6 +1229,54 @@ h1.header__title {
     }
 }
 
+#map {
+    position: relative;
+}
+
+.custom-balloon {
+    min-width: 270px;
+    position: absolute;
+    padding-bottom: 5px;
+    padding-left: 3px;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-100%);
+}
+
+.inner-balloon {
+    background-color: var(--main-bg-color);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 16px 12px;
+    border-radius: 24px 24px 24px 4px;
+    margin-bottom: 7px;
+}
+
+.custom-balloon::after {
+    position: absolute;
+    content: '';
+    width: 6px;
+    height: 6px;
+    background-color: #A3FF00;
+    border-radius: 50%;
+    bottom: 0;
+    left: 0;
+}
+
+.custom-balloon::before {
+    position: absolute;
+    content: '';
+    width: 12px;
+    height: 100%;
+    background-image: url("./assets/images/balloon-bg.svg");
+    background-repeat: no-repeat;
+
+    bottom: 0;
+    left: 3px;
+}
+
 #map [class*="copyrights-pane"] {
     display: none;
 !important;
@@ -1238,22 +1290,26 @@ h1.header__title {
     -o-filter: grayscale(1);
 }
 
+@media (max-width: 767px) {
+    .custom-balloon {
+        top: 50%;
+        left: 50%;
+        transform: translateY(-100%) translateX(-50%);
+    }
 
+    .inner-balloon {
+        border-radius: 24px;
+        position: relative;
+        z-index: 1111;
+    }
 
-.balloon-root {
-    min-height: 50px;
-    min-width: 100px;
-    width: 100%;
+    .custom-balloon::after {
+        left: 50%;
+        transform: translateX(-50%);
+    }
 
-    position: relative;
-    display: flex;
-
-    align-items: center;
-    justify-content: stretch;
-    border-radius: 10px;
-    background-color: #151515;
-    text-align: center;
-    color: var(--highlight-color);
-    z-index: 10;
-
+    .custom-balloon::before {
+        left: 50%;
+    }
 }
+
