--- a/style.css
+++ b/style.css
@@ -412,7 +412,7 @@ section {
     background: radial-gradient(rgba(255, 2, 2, 0) 20%,
     rgba(21, 21, 21, .5) 40%, rgba(21, 21, 21, .9) 60%, rgba(21, 21, 21, 1) 100%),
     linear-gradient(0deg, rgba(21, 21, 21, 1) 0%, rgba(255, 255, 255, 0) 40%),
-    url('./assets/images/header-bg.png');
+    url('./assets/images/header-bg.webp');
 
     background-attachment: scroll;
 
@@ -764,7 +764,7 @@ h1.header__title {
     display: block;
     width: 100%;
     height: 100%;
-    background: url("./assets/images/development-bg.png") var(--secondary-color) no-repeat top center/contain;
+    background: url("./assets/images/development-bg.webp") var(--secondary-color) no-repeat top center/contain;
     top: 0;
     left: 0;
 }
@@ -954,7 +954,7 @@ h1.header__title {
 .about {
     background: radial-gradient(ellipse at 100% 100%, rgba(21, 21, 21, .7) 30%,
     rgba(21, 21, 21, .9) 40%, rgba(21, 21, 21, 1) 50%, rgba(21, 21, 21, 1) 100%),
-        /*linear-gradient(270deg, rgba(255, 255, 255, 0) 30%, rgba(21, 21, 21, .8) 70%),*/ url('./assets/images/about-bg.png');
+        /*linear-gradient(270deg, rgba(255, 255, 255, 0) 30%, rgba(21, 21, 21, .8) 70%),*/ url('./assets/images/about-bg.webp');
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
@@ -1110,7 +1110,7 @@ h1.header__title {
                 ellipse at 100% 100%, rgba(21, 21, 21, .7) 30%,
                 rgba(21, 21, 21, .9) 40%, rgba(21, 21, 21, 1) 50%, rgba(21, 21, 21, 1) 100%),
         linear-gradient(180deg, rgba(21, 21, 21, 1) 70%, rgba(255, 255, 255, 0) 100%),
-        url('./assets/images/about-bg.png');
+        url('./assets/images/about-bg.webp');
         background-size: contain;
         background-position: bottom;
         background-repeat: no-repeat;
